:memo: the Z Garbage Collector